Changes for libmusicbrainz 3.0.1
--------------------------------

   - Fixed mb_query_get_tracks function name in mb_c.h.
   - Detect correctly installed libdiscid in src/disc.cpp.
   - Support for releaseEvents in ArtistIncludes. (#2974)

Changes for libmusicbrainz 3.0.0 (2007-05-12)
---------------------------------------------

   - Use CMake as the only build system.

Changes for libmusicbrainz 3.0.0beta3
-------------------------------------

   - C bindings for artist/release/track collections.
   - New cdlookup_c.c example.

Changes for libmusicbrainz 3.0.0beta2
-------------------------------------

   - Fixed MusicBrainz::extractUuid for non-artist IDs.
   - Implementation of release types.
   - Implementation of release lists on track level.
   - New cdlookup.cpp example.

Changes for libmusicbrainz 3.0.0beta1
-------------------------------------

   - Rewritten from scratch, libmusicbrainz now uses the new XML web service.
   - New object oriented API in C++ based on python-musicbrainz2, with
     GLib-style C bindings.


******************************************************************************
******************************************************************************
******************************************************************************

Changes for libmusicbrainz 2.1.2
-------------------------------------

   - Since expat is now installed on most systems we removed our internal copy
     and now rely on the system installed version.
   - Juergen Kreileder Supplied minimal patch for making sure that mb_client still works
     when CDO_CHECK_TYPE is defined
   - Fixed a C++ style variable declaration inside the album.c C module
   - On linux the cdrom drive is now opened in non-blocking mode
   - Fixed bug #834541: Tagger setting track no. is 0 - possibly due to trm mixup?
   - Added support for parsing AdvancedRelationship date. Also added new
     getrels.c example program.